<resources>
    <string name="app_name">FG Wallet</string>
    <string name="title_activity_navigation_drawer_activtiy">NavigationDrawerActivtiy</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_sms">SmsActivity</string>
    <string name="action_logout">Logout</string>
    <string name="msg_enter_mobile">Enter your mobile number to get started!</string>
    <string name="lbl_name">Name</string>
    <string name="lbl_email">Email</string>
    <string name="lbl_mobile">Mobile</string>
    <string name="lbl_next">Next</string>
    <string name="msg_sit_back">Sit back &amp; Relax! while we verify your mobile number</string>
    <string name="msg_manual_otp">Enter the OTP below in case if we fail to detect the SMS automatically</string>
    <string name="lbl_enter_otp">Enter OTP</string>
    <string name="lbl_submit">Submit</string>
    <string name="lbl_resend">Resend</string>
    <string name="msg_recovery">If you ever lose your phone, you will need phrase and creation timestamp below to recover your wallet</string>
    <string name="please_write">please write it down</string>
    <string name="msg_12_phasre">ancient mushroom ice shift target season sail doctor wrist seed tragic camera</string>
    <string name="msg_recovery1">select the 1th word of your recovery phrase from the list below</string>
    <string name="msg_recovery2">select the 2th word of your recovery phrase from the list below</string>
    <string name="msg_recovery3">select the 3th word of your recovery phrase from the list below</string>
    <string name="msg_recovery4">select the 4th word of your recovery phrase from the list below</string>
    <string name="msg_recovery5">select the 5th word of your recovery phrase from the list below</string>
    <string name="msg_recovery6">select the 6th word of your recovery phrase from the list below</string>
    <string name="msg_recovery7">select the 7th word of your recovery phrase from the list below</string>
    <string name="msg_recovery8">select the 8th word of your recovery phrase from the list below</string>
    <string name="msg_recovery9">select the 9th word of your recovery phrase from the list below</string>
    <string name="msg_recovery10">select the 10th word of your recovery phrase from the list below</string>
    <string name="msg_recovery11">select the 11th word of your recovery phrase from the list below</string>
    <string name="msg_recovery12">select the 12th word of your recovery phrase from the list below</string>
    <string name="recover">Recover</string>
    <string name="enter_recover">Enter your recovery phrase</string>
    <string name="enter_pin">Enter Your PIN (4 Digits)</string>
    <string name="new_walllet">New Wallet</string>
    <string name="restore_walllet">Restore Wallet</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="new_pin">New PIN (4Digits)</string>
    <string name="re_enter_pin">Re-enter PIN</string>
    <string name="terms_conditions">By Creating a FG wallet account, you agree to terms and conditions of FG wallet</string>
    <string name="create_wallet">Create Wallet</string>
    <string name="restore_mobile_number">Mobile Number</string>
    <string name="your_pin">Your PIN</string>
    <string name="btn_restore_walllet">Restore Wallet</string>
    <string name="need_help">Need help?</string>
    <string name="transaction_history">Transaction History</string>
    <string name="market_chart">Market Chart</string>
    <string name="atm_map">ATM Map</string>
    <string name="settings">Settings</string>
    <string name="contact_support">Contact Support</string>
    <string name="log_out">Exit</string>
    <string name="send">Send</string>
    <string name="receive">Receive</string>
    <string name="current_balance">Current Balance</string>
    <string name="btc">BTC</string>
    <string name="recipient">Recipient</string>
    <string name="amount">Amount</string>
    <string name="memo">Memo</string>
    <string name="network_fee">Network Fee</string>
    <string name="btn_continue">Continue</string>
    <string name="create_new_address">Create New Address</string>
    <string name="about">About</string>
    <string name="recovery_phrase">Recovery Phrase</string>
    <string name="change_password">Change Password</string>
    <string name="rescan_blockchain">Rescan Blockchain</string>
    <string name="change_language">Change Language</string>
    <string name="important">IMPORTANT</string>
    <string name="title_recovery_phrase">DO NOT let anyone see your recovery phrase or they can spend your bitcoins.</string>
    <string name="msg_recovery_phrase">NEVER type your recovery phrase into password managers or any software.</string>
    <string name="show_phrase">Show phrase</string>
    <string name="title_recovery_phrase2">If you ever lose your phone, you will need this phrase and timestamp creation to recover your wallet</string>
    <string name="msg_recovery_phrase2">Please write it down</string>
    <string name="old_pin">Old PIN</string>
    <string name="re_enter_new_pin">Re-Enter New PIN</string>
    <string name="verify_blockchain">Verify on Blockchain</string>
    <string name="transaction">Transaction</string>
    <string name="transaction_memo">Memo:</string>
    <string name="to">To:</string>
    <string name="from">From:</string>
    <string name="date">Date:</string>
    <string name="received">Received</string>
    <string name="sent">Sent</string>
    <string name="min_withdrawal">Minimum withdrawal amount:</string>
    <string name="send_network_fee">Network fee:</string>
    <string name="balance_minus_fee">Use total available minus fee:</string>
    <string name="toast_wallet_reset">Your wallet was reset!\nIt will take some time to recover.</string>
    <string name="wallet_disclaimer_fragment_remind_safety">Use at your own risk. Read the &lt;u&gt;safety notes&lt;/u&gt;.</string>
    <string name="wallet_disclaimer_fragment_remind_backup">You need to &lt;u&gt;back up your wallet&lt;/u&gt;!</string>
    <string name="blockchain_state_progress_hours">%1$s, %2$d hours behind</string>
    <string name="blockchain_state_progress_days">%1$s, %2$d days behind</string>
    <string name="blockchain_state_progress_weeks">%1$s, %2$d weeks behind</string>
    <string name="blockchain_state_progress_months">%1$s, %2$d months behind</string>
    <string name="blockchain_state_progress_downloading">Synchronizing with network</string>
    <string name="blockchain_state_progress_stalled">Synchronization stalled</string>
    <string name="blockchain_state_progress_problem_storage">Synchronizing: Storage problem</string>
    <string name="blockchain_state_progress_problem_network">Synchronizing: Network problem</string>
    <string name="wallet_address_fragment_clipboard_msg">Bitcoin address copied to clipboard</string>
    <string name="wallet_address_dialog_fragment_hint">To protect your privacy, your address will change once it receives a payment.</string>
    <string name="wallet_balance_fragment_insecure_device">Your device is old and insecure. Please only use for small amounts.</string>
    <string name="wallet_balance_fragment_too_much">This amount is quite high for carrying in your pocket. Please move some to a safer place.</string>
    <string name="wallet_balance_fragment_replaying">Balance is unavailable during replay.</string>
    <string name="exchange_rates_activity_title">Exchange rates</string>
    <string name="exchange_rates_fragment_empty_text">Could not load exchange rates.</string>
    <string name="exchange_rates_fragment_empty_search">Could not find exchange rate.</string>
    <string name="exchange_rates_fragment_default">(default)</string>
    <string name="exchange_rates_fragment_rate">rate</string>
    <string name="exchange_rates_fragment_balance">balance</string>
    <string name="exchange_rates_fragment_source">Price from %s</string>
    <string name="exchange_rates_options_search">Search exchange rate</string>
    <string name="wallet_transactions_fragment_empty_text_received">No Bitcoins received so far.</string>
    <string name="wallet_transactions_fragment_empty_text_sent">No Bitcoins sent so far.</string>
    <string name="wallet_transactions_fragment_empty_text_howto">How to get Bitcoins?\n\nTrade for traditional money,\nsell goods or services or\nearn by working.</string>
    <string name="wallet_transactions_row_warning_backup">Congratulations, you received your first payment!</string>
    <string name="wallet_transactions_row_warning_storage_encryption">Hint: to increase the safety of your wallet, you can &lt;u&gt;encrypt your device&lt;/u&gt;. This also protects data of other apps.</string>
    <string name="wallet_transactions_row_warning_chain_forking">The Bitcoin network is undergoing maintenance. You\'re advised to not send or receive any coins until maintenance is finished. &lt;u&gt;More information.&lt;/u&gt;</string>
    <string name="wallet_transactions_fragment_coinbase">mined</string>
    <string name="wallet_transactions_fragment_internal">internal</string>
    <string name="wallet_transactions_options_filter">Filter</string>
    <string name="wallet_transactions_options_filter_all">All payments</string>
    <string name="wallet_transactions_options_filter_received">Received payments</string>
    <string name="wallet_transactions_options_filter_sent">Sent payments</string>
    <string name="wallet_options_safety_menu">Safety</string>
    <string name="wallet_options_encrypt_keys_set">Set spending PIN</string>
    <string name="wallet_options_encrypt_keys_change">Change spending PIN</string>
    <string name="wallet_options_safety">Safety notes</string>
    <string name="wallet_options_technical_notes_title">Technical notes</string>
    <string name="wallet_options_donate">Tip / donate</string>
    <string name="wallet_donate_address_label">Donation for Bitcoin Wallet</string>
    <string name="alert_dialogs_fragment_insecure_bluetooth_title">Security alert</string>
    <string name="alert_dialogs_fragment_insecure_bluetooth_message">Your device\'s Bluetooth component is vulnerable. Your Bitcoins on this device are at risk, regardless of the app you\'re using to store them!\n\nWe suggest to switch off Bluetooth immediately and check with your device manufacturer for an Android OS update that implements security patch level \'%s\' or later.</string>
    <string name="wallet_low_storage_dialog_title">Internal device storage space low!</string>
    <string name="wallet_low_storage_dialog_msg">Bitcoin Wallet uses internal storage for remembering transactions and blocks. If it runs out of space, it will stop working and your Bitcoins will be at risk!\n\nDo you want to open the Application Manager to uninstall unneeded apps?</string>
    <string name="wallet_low_storage_dialog_button_apps">Manage apps</string>
    <string name="wallet_timeskew_dialog_title">Check date &amp; time settings</string>
    <string name="wallet_timeskew_dialog_msg">Your device time is off by %d minutes. You probably cannot send or receive Bitcoins due to this problem.\n\nYou should check and if necessary correct your date, time and timezone settings.</string>
    <string name="wallet_version_dialog_title">A new version is available!</string>
    <string name="wallet_version_dialog_msg">This version fixes important bugs. For details, see the change log on Google Play.</string>
    <string name="wallet_version_dialog_msg_deprecated">If you don\'t see an update, this probably means your version of Android isn\'t supported any more.</string>
    <string name="wallet_version_dialog_button_market">Google Play</string>
    <string name="wallet_version_dialog_button_binary">Download</string>
</resources>