<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.ivan.fgwallet.NewWalletActivtiy">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/wallet_ic"
        android:layout_above="@+id/lin"
        android:layout_centerHorizontal="true" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="50dp"
        android:id="@+id/lin"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:layout_margin="3dp"
            android:text="@string/mobile_number"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <com.hbb20.CountryCodePicker
                android:id="@+id/ccp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:showFlag="false"
                android:layout_gravity="center"
                android:background="@android:color/white"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp"
                android:gravity="center"/>

            <!--<Spinner-->
                <!--android:layout_width="60dp"-->
                <!--android:layout_height="match_parent"-->
                <!--android:textColor="@android:color/black"-->
                <!--android:background="@android:color/white"-->
                <!--android:layout_marginTop="3dp"-->
                <!--android:layout_marginBottom="3dp"-->
                <!--android:gravity="center"-->
                <!--android:id="@+id/countryCode"-->

                <!--android:textStyle="bold"-->
                <!--android:text="+91"/>-->

            <EditText
                android:layout_width="match_parent"
                android:background="@android:color/white"
                android:layout_margin="3dp"
                android:id="@+id/number"
                android:inputType="number"
                android:singleLine="true"
                android:maxLength="12"
                android:textCursorDrawable="@drawable/color_cursor"
                android:paddingLeft="10dp"
                android:layout_height="40dp" />

        </LinearLayout>



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:layout_margin="3dp"
            android:text="@string/new_pin"/>

        <EditText
            android:layout_width="match_parent"
            android:background="@android:color/white"
            android:layout_margin="3dp"
            android:inputType="numberPassword"
            android:id="@+id/newPin"
            android:maxLength="4"

            android:textCursorDrawable="@drawable/color_cursor"
            android:singleLine="true"
            android:paddingLeft="10dp"
            android:layout_height="40dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:layout_margin="3dp"
            android:text="@string/re_enter_pin"/>

        <EditText
            android:layout_width="match_parent"
            android:background="@android:color/white"
            android:layout_margin="3dp"
            android:inputType="numberPassword"
            android:id="@+id/reenterPin"
            android:maxLength="4"
            android:textCursorDrawable="@drawable/color_cursor"

            android:paddingLeft="10dp"
            android:layout_height="40dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:layout_marginTop="15dp"
            android:text="@string/terms_conditions"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:id="@+id/bt_restoreWallet"
            android:gravity="center"
            android:textCursorDrawable="@drawable/color_cursor"
            android:singleLine="true"
            android:background="@drawable/border_white"
            android:textSize="20dp"
            android:text="@string/create_wallet"/>


    </LinearLayout>

</RelativeLayout>
