<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.ivan.fgwallet.NewWalletActivtiy">
    <include layout="@layout/tootlbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="50dp"
        android:id="@+id/lin"
        android:orientation="vertical">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/wallet_ic"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp"
            android:layout_above="@+id/lin"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:layout_margin="3dp"
            android:text="@string/old_pin"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:layout_width="match_parent"
                android:background="@android:color/white"
                android:layout_margin="3dp"
                android:id="@+id/old_pin"
                android:inputType="numberPassword"
                android:singleLine="true"
                android:maxLength="4"
                android:textCursorDrawable="@drawable/color_cursor"
                android:paddingLeft="10dp"
                android:layout_height="40dp" />

        </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:layout_margin="3dp"
            android:text="@string/new_pin"/>

        <EditText
            android:layout_width="match_parent"
            android:background="@android:color/white"
            android:layout_margin="3dp"
            android:inputType="numberPassword"
            android:id="@+id/new_pin"
            android:textCursorDrawable="@drawable/color_cursor"
            android:singleLine="true"
            android:maxLength="4"
            android:paddingLeft="10dp"
            android:layout_height="40dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:layout_margin="3dp"
            android:text="@string/re_enter_new_pin"/>

        <EditText
            android:layout_width="match_parent"
            android:background="@android:color/white"
            android:layout_margin="3dp"
            android:inputType="numberPassword"
            android:id="@+id/re_enter_new_pin"
            android:textCursorDrawable="@drawable/color_cursor"
            android:singleLine="true"
            android:maxLength="4"
            android:paddingLeft="10dp"
            android:layout_height="40dp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:layout_marginTop="13dp"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:gravity="center"
            android:id="@+id/btn_change_password"
            android:background="@drawable/border_white"
            android:textSize="20dp"
            android:text="@string/change_password"/>


    </LinearLayout>

</RelativeLayout>
